--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,16 @@
 /*  your css code here. If applicable */
+.container{
+	width: 100%;
+    height: 100vh;
+    display: flex;
+    flex-wrap: wrap;
+    background-color:black;
+	padding:10px
+}
+.square{
+	width: 21px;
+	height: 20px;
+    background-color: #4b5057;
+    margin: 4px;
+	padding:1px;
+}
